--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -47,8 +47,8 @@ jobs:
       - name: Run pre-commit
         run: poetry run pre-commit run --all-files
       - uses: codecov/codecov-action@v3
-        # with:
-        #   token: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   deploy:
     needs: build
