--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,8 @@ repos:
     rev: v1.4.1
     hooks:
     -   id: mypy
+
+- repo: https://github.com/pre-commit/mirrors-clang-format
+  rev: v11.1.0
+  hooks:
+  -   id: clang-format
